# cpp-mcp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  server_example.cpp  stdio_server_example.cpp
examples/network/: CMakeLists.txt  README.md  network_client_example.cpp  simple_tcp_server.cpp
include/: mcp_message.h  mcp_prompt.h  mcp_server.h  mcp_sse_client.h  mcp_stdio_client.h
src/: CMakeLists.txt  mcp_resource.cpp  mcp_server.cpp  mcp_sse_client.cpp  mcp_stdio_client.cpp
test/: mcp_test.cpp
